--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -73,12 +73,17 @@
                     border-radius: 2em;
                 }
                 .col {
+                    opacity: 0;
                     position: relative;
                     display: flex;
                     align-self: flex-start;
                     justify-content: flex-end;
                     text-align: right;
                     width: 50%;
+                    transition: 2s;
+                    &.show {
+                        opacity: 1;
+                    }
                     &::after {
                         position: absolute;
                         content: "";
