--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -13,6 +13,7 @@
         overflow: hidden;
         padding: 1em;
         .actions {
+            position: relative;
             display: flex;
             align-self: flex-start;
             background-color: $c-grey-300;
@@ -52,15 +53,33 @@
                     background-color: $c-grey-200;
                 }
             }
+            .error-log {
+                opacity: 0;
+                position: absolute;
+                bottom: -1.4em;
+                left: 0.6em;
+                font-size: 0.6em;
+                color: $c-red-500;
+                font-weight: 600;
+                &.show {
+                    transition: opacity 1s;
+                    opacity: 1;
+                } 
+            }
         }
         .grid-results {
             flex-grow: 1;
             overflow-y: auto;
             .row {
+                opacity: 0;
                 position: relative;
                 display: flex;
                 flex-direction: column;
                 list-style: none;
+                transition: opacity 0.5s;
+                &.show {
+                    opacity: 1;
+                }
                 &::before {
                     position: absolute;
                     content: "";
@@ -80,7 +99,7 @@
                     justify-content: flex-end;
                     text-align: right;
                     width: 50%;
-                    transition: 2s;
+                    transition: opacity 2s;
                     &.show {
                         opacity: 1;
                     }
