--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -6,3 +6,7 @@ $c-black-100: #484848;
 $c-black-200: black;
 $c-red-400: rgb(211, 0, 0);
 $c-red-500: rgb(220, 0, 0);
+
+.txt-c-red-400 {
+    color: $c-red-400;
+}
