--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -1,5 +1,4 @@
-@media only screen and (max-width: 768px),
-only screen and (max-width: 576px) and (orientation: landscreen)  {
+@media only screen and (max-width: 992px)  {
     #app {
         main {
             .actions {
